--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,19 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="template.html"
+>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel ="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+    <script  src="/webjars/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
+<div layout:fragment="content">
+    <div class="p-3">
+        <div class="card ">
+            <div class="card-header"> Liste Patients </div>
+            <div class="card-body">
+                <form  method="get" th:action="@{index}">
+                    <label> Keyword:</label>
+                    <input  type ="text" name="keyword" th:value="${keyword}">
+                    <button type="submit" class="btn btn-info">
+                        Search
+                    </button>
+                </form>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Id</th> <th>Nom</th> <th>Date</th> <th>Malade</th> <th>Score</th>
+                    </tr>
+                    <tr th:each="p:${listPatient}">
+                        <td th:text="${p.id}" ></td>
+                        <td th:text="${p.nom}" ></td>
+                        <td th:text="${p.dateNaissance}" ></td>
+                        <td th:text="${p.malade}" ></td>
+                        <td th:text="${p.score}" ></td>
+                        <td>
+                            <a onclick="return confirm('Etes vous sure ?')"  th:href=" @{delete(id=${p.id}, keyword=${keyword},page=${currentPage})}"class="btn btn-danger" >
+                                Delete</a>
+                        </td>
+
+
+
+                    </tr>
+                    </thead>
+                </table>
+                <ul class="nav nav-pills">
+                    <li th:each="v,item:${pages}">
+                        <a  th:href="@{index(page=${item.index},keyword=${keyword})}"
+                            th:class="${currentPage==item.index? 'btn btn-info ms-1':'btn btn-outline-info ms-1' }"
+                            th:text="${item.index}"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="p-3">
     <div class="card ">
     <div class="card-header"> Liste Patients </div>
         <div class="card-body">
             <form  method="get" th:action="@{index}">
                 <label> Keyword:</label>
-                <input class="form-control" type ="text" name="keyword" th:value="${keyword}">
-                <button type="submit" class="btn btn-info">Chercher</button>
+                <input  type ="text" name="keyword" th:value="${keyword}">
+                <button type="submit" class="btn btn-info">
+                    <i class="bi bi-search"></i>
+                </button>
             </form>
             <table class="table">
                 <thead>
@@ -27,7 +78,8 @@
                     <td th:text="${p.malade}" ></td>
                     <td th:text="${p.score}" ></td>
                     <td>
-                        <a onclick="return confirm('Etes vous sure ?')"  th:href=" @{delete(id=${p.id}, keyword=${keyword},page=${currentPage})}"class="btn btn-danger" > Delete</a>
+                        <a onclick="return confirm('Etes vous sure ?')"  th:href=" @{delete(id=${p.id}, keyword=${keyword},page=${currentPage})}"class="btn btn-danger" >
+                        <i class="bi bi-trash"></i></a>
                     </td>
 
 
